# hybrid-fs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
include/: MetaData.h  bitmap.h  common.h  dcache.h  disk.h  inode.h  ops.h  option.h
include/types/: ext4_dentry.h  hdd_super.h
src/: MetaData.cc  dcache.cc  disk.cc  fs_getattr.cc  fs_init.cc  fs_mkdir.cc  fs_mknod.cc  fs_open.cc  fs_read.cc  fs_readdir.cc  fs_rmdir.cc  fs_unlink.cc  fs_write.cc  inode.cc  inode_datablock.cc  main.cc
